@@ -124,13 +124,16 @@ Complete list of settings that you can put into ``testenv*`` sections:
 
     test-specific dependencies -.to be installed into the environment prior to project
     package installation.  Each line defines a dependency, which will be
-    passed to easy_install/pip for processing.  A line specify a file,
+    passed to the installer command for processing.  A line specify a file,
     an URL or a package name.  You can additionally specify
     an :confval:`indexserver` to use for installing this dependency.
     All derived dependencies (deps required by the dep) will then be
     retrieved from the specified indexserver::
 
         deps = :myindexserver:pkg
+
+    (Experimentally introduced in 1.6.1) all installer commands are executed
+    using the ``{toxinidir}`` as the current working directory.
 
 .. confval:: setenv=MULTI-LINE-LIST
    
